// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link functions correctly with children 1`] = `
<styled.a
  href="http://wizeline.com/"
  priority="b150"
  theme={
    Object {
      "textLink": "#50a5e7",
    }
  }
>
  hello
</styled.a>
`;

exports[`Link functions correctly without children 1`] = `
<styled.a
  href="http://wizeline.com/"
  priority="b150"
  theme={
    Object {
      "textLink": "#50a5e7",
    }
  }
/>
`;
